--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,53 @@
     color: var(--main-color);
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+#logo-container {
+    display: flex;
+    align-items: center;
+}
+
+#logo {
+    width: 61.09px;
+    /* Ajustez à la taille que vous souhaitez */
+    height: auto;
+    /* Conserve les proportions */
+}
+
+/* Style pour la navigation */
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+nav ul li {
+    margin-right: 20px;
+    /* Utilisez des pixels comme recommandé */
+}
+
+/* Bordure bleue au survol */
+nav ul li a:hover {
+    border-top: 2px solid #0065FC;
+    color: #0065FC;
+    /* En haut pour le desktop */
+}
+
+/* Suppression du style par défaut des liens */
+nav ul li a {
+    text-decoration: none;
+    color: black;
+    padding: 25px;
+    /* padding plutôt que margin pour l'effet de survol */
+}
+
 body {
     display: flex;
     justify-content: center;
