--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    margin-bottom: 30px;
 }
 
 #logo-container {
-    display: flex;
-    align-items: center;
+    padding: 30px 0px;
 }
 
 #logo {
@@ -35,13 +34,11 @@ header {
 /* Style pour la navigation */
 nav ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
 }
 
 nav ul li {
-    margin-right: 20px;
+    margin-left: 68px;
     /* Utilisez des pixels comme recommandé */
 }
 
@@ -49,14 +46,11 @@ nav ul li {
 nav ul li a:hover {
     border-top: 2px solid #0065FC;
     color: #0065FC;
-    /* En haut pour le desktop */
 }
 
-/* Suppression du style par défaut des liens */
 nav ul li a {
-    text-decoration: none;
     color: black;
-    padding: 25px;
+    padding-top: 20px;
     /* padding plutôt que margin pour l'effet de survol */
 }
 
