--- a/css/style.css
+++ b/css/style.css
@@ -13,45 +13,121 @@
     color: var(--main-color);
 }
 
+/* Pour le <header> */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
+    height: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
-#logo-container {
-    padding: 30px 0px;
+.logo {
+    height: 19px;
 }
 
-#logo {
-    width: 61.09px;
-    /* Ajustez à la taille que vous souhaitez */
-    height: auto;
-    /* Conserve les proportions */
+.nav-hover {
+    background: white;
+    height: 2px;
 }
 
-/* Style pour la navigation */
-nav ul {
-    list-style: none;
+.container-nav1:hover .nav1-hover,
+.container-nav2:hover .nav2-hover {
+    background: #0065fc;
+}
+
+.container-nav1:hover .nav1,
+.container-nav2:hover .nav2 {
+    color: #0065fc;
+}
+
+.nav1-hover {
+    width: 112px;
+}
+
+.nav2-hover {
+    width: 63px;
+}
+
+nav {
     display: flex;
+    gap: 68px;
+    height: 100%;
 }
 
-nav ul li {
-    margin-left: 68px;
-    /* Utilisez des pixels comme recommandé */
+.container-nav1,
+.container-nav2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: none;
 }
 
-/* Bordure bleue au survol */
-nav ul li a:hover {
-    border-top: 2px solid #0065FC;
-    color: #0065FC;
-}
-
-nav ul li a {
+.nav {
+    margin-bottom: 40px;
     color: black;
-    padding-top: 20px;
-    /* padding plutôt que margin pour l'effet de survol */
+}
+
+/* Pour le <main> */
+.margin-top {
+    margin-top: 30px;
+}
+
+h1{
+    font-weight: 700;
+    font-size: 22px;
+    margin: 0px;
+}
+
+h2 {
+    font-weight: normal;
+    font-size: medium;
+}
+
+form {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    max-width: 400px;
+}
+
+.i-container {
+    height: 100%;
+    background: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 15px 0px 0px 15px;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
+
+.input-text {
+    flex: 1;
+    position: relative;
+    height: 100%;
+}
+
+#localisation {
+    position: absolute;
+    inset: 0;
+    border: 1px solid #f2f2f2;
+    font-weight: 700;
+    font-size: 18px;
+    padding-left: 10px;
+}
+
+.rechercher-desktop {
+    height: 100%;
+    background: #0065fc;
+    border: 1px solid #0065fc;
+    border-radius: 0px 15px 15px 0px;
+    font-weight: 700;
+    font-size: 18px;
+    color: #ffffff;
+    padding: 15px;
+    cursor: pointer;
 }
 
 body {
