--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ article {
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding-bottom: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   height: 100%;
@@ -302,7 +302,6 @@ main img {
 .gras16px {
   font-weight: 700;
   font-size: 16px;
-  margin: 2px;
   padding: 0px 14px;
 }
 
@@ -311,9 +310,11 @@ main img {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  margin: 2px;
-  padding: 0px;
   padding-left: 14px;
+}
+
+.gras16px, .price-hotel {
+    margin: 5px 0px 5px 0px;
 }
 
 /* Styles pour la notation des hôtels */
@@ -333,6 +334,7 @@ aside {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 /* Styles pour les icônes de la barre latérale */
@@ -348,23 +350,23 @@ aside i {
   height: 140px;
   width: 100%;
   display: flex;
+  margin-bottom: 30px;
 }
 
 /* Styles pour les images des cartes de la barre latérale */
 aside img {
   border: 5px solid #ffffff;
   border-radius: 20px 0px 0px 20px;
-  width: 50%;
+  width: 30%;
   object-position: center;
   object-fit: cover;
 }
 
 /* Styles pour le conteneur des cartes de la barre latérale */
 .card-aside-container {
-  margin-top: 30px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 100%;
 }
 
@@ -373,11 +375,7 @@ aside img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px 0px 5px 0px;
-}
-
-.title-price {
-    background-color: red;
+  padding-bottom: 5px;
 }
 
 /* Styles pour les activités */
@@ -388,14 +386,13 @@ aside img {
 
 /* Styles pour les cartes d'activités */
 .activite-card {
-  width: 20%;
+  width: 23%;
   background: #ffffff;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  height: 430px;
   text-decoration: none;
   color: black;
 }
@@ -411,6 +408,10 @@ aside img {
 /* Styles pour la section des activités */
 .activites-section h4 {
   margin: 60px 0px 20px 0px;
+}
+
+.act-margin {
+    margin: 20px 0px;
 }
 
 /* Styles pour le pied de page */
